# upcloud-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: server_create.rs  server_create_advanced.rs  server_create_simple.rs  server_example.rs  server_list.rs
src/: client.rs  config.rs  constants.rs  error.rs  lib.rs  server.rs
src/resources/: server.rs
src/types/: common.rs  mod.rs  server.rs
