[package]
name = "upcloud-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio =  { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1.83"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }