[package]
name = "upcloud-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ville Vesilehto <ville@vesilehto.fi>"]
description = "Async UpCloud API client for Rust"
repository = "https://github.com/thevilledev/upcloud-rust-sdk"
documentation = "https://docs.rs/upcloud-sdk"
categories = ["api-bindings"]
keywords = ["upcloud", "api", "client", "async", "rust"]

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio =  { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1.83"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }